@@ -1,7 +1,7 @@
 #!/bin/sh
 # WARNING: This file was auto-generated. Do not edit!
 #
-# $Id: svctool.in,v 2.551 2021-04-22 19:15:01+05:30 Cprogrammer Exp mbhangui $
+# $Id: svctool.in,v 2.552 2021-04-28 11:20:35+05:30 Cprogrammer Exp mbhangui $
 #
 
 #
@@ -28,7 +28,7 @@ host=@HOST@
 shared_objects=0
 use_dlmopen=0
 skip_sendmail_check=0
-RCSID="# \$Id: svctool.in,v 2.551 2021-04-22 19:15:01+05:30 Cprogrammer Exp mbhangui $"
+RCSID="# \$Id: svctool.in,v 2.552 2021-04-28 11:20:35+05:30 Cprogrammer Exp mbhangui $"
 
 if [ -d /run/mysqld ] ; then
 	mysqlSocket=/run/mysqld/mysqld.sock
@@ -710,7 +710,7 @@ Known values for OPTION are:
                    "@servicedir@/qmail-smtpd.25 @servicedir@/qmail-imapd.143"
 
 --refreshsvc=service_path
-  [--run-file-only]
+  [--run-file-only] [--force]
 
   Refresh run script and variables for a supervise service
   service_path   - Full path of service
@@ -719,6 +719,7 @@ Known values for OPTION are:
                    "@servicedir@/qmail-smtpd.25 @servicedir@/qmail-imapd.143"
                    service_path can be "all" to act on all services
   run-file-only  - Recreate run files but not variables
+  force          - Recreate service even if it has norefreshsvc flag
   NOTE: if the file .norefreshsvc is present in the variable or the config
   directory, refresh is skipped
 
@@ -6155,7 +6156,7 @@ if [ " $1" = " all" ] ; then
 			echo "$i/variables/.options or $i/.options missing" 1>&2
 			continue
 		fi
-		if [ -f $i/variables/.norefreshsvc ] ; then
+		if [ -f $i/variables/.norefreshsvc -a $force -eq 0 ] ; then
 			if [ $silent -eq 0 ] ; then
 				echo "Skip Refreshing service $svcname"
 			fi
@@ -6166,7 +6167,7 @@ if [ " $1" = " all" ] ; then
 			sh $i/variables/.options
 		fi
 	done
-	if [ -f "$DESTDIR"$sysconfdir/control/defaultqueue/.norefreshsvc ] ; then
+	if [ -f "$DESTDIR"$sysconfdir/control/defaultqueue/.norefreshsvc -a $force -eq 0 ] ; then
 		if [ $silent -eq 0 ] ; then
 			echo "Skip Refreshing config defaultqueue"
 		fi
@@ -6189,10 +6190,12 @@ else
 			continue
 		fi
 		if [ -f "$DESTDIR"$i/variables/.norefreshsvc -o -f "$DESTDIR"$i/.norefreshsvc ] ; then
-			if [ $silent -eq 0 ] ; then
-				echo "Skip Refreshing service/config $svcname"
+			if [ $force -eq 0 ] ; then
+				if [ $silent -eq 0 ] ; then
+					echo "Skip Refreshing service/config $svcname"
+				fi
+				continue
 			fi
-			continue
 		fi
 		if [ -f "$DESTDIR"$i/variables/.options ] ; then
 			if [ $silent -eq 0 ] ; then
